--- a/week6/redux-contacts/src/index.css
+++ b/week6/redux-contacts/src/index.css
@@ -1,13 +1,38 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+html, body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+  background: url('./images/phone.png');
+  background-repeat: no-repeat;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+form {
+  max-width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  padding: 72px 32px;
+  background-color: rgb(240, 240, 240);
+  box-shadow: 6px 8px 0px rgba(0,0,0,0.5);
+}
+
+input {
+  margin-bottom: 10px;
+  padding: 14px 16px;
+  outline: none;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 1px solid black;
+}
+
+input:focus {
+border-bottom: 1px solid gray;
+}
+
+.content {
+  display: grid;
+  margin-top: 30px;
 }
